# midi-visualiser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/midi_visualiser/: main.py  piano_display.py  piano_display_settings.py  scrolling_note.py  song.py  visualiser.py
