[project]
name = "midi-visualiser"
version = "0.1.10"
description = "A real-time MIDI player and visualiser built in Python."
readme = "README.md"
authors = [
    { name = "Benjamin Rall", email = "benr2508@aol.com" }
]
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "mido>=1.3.3",
    "pygame>=2.6.1",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/benjaminrall/midi-visualiser"

[project.scripts]
midi-visualiser = "midi_visualiser.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midi_visualiser"]